# Haskell-ILP

./: CHANGELOG.md  Haskell-ILP.cabal
app/: Main.hs
src/Solver/: Data.hs  ILP.hs  Indexed.hs  Interface.hs  Matrix.hs  Tableau.hs
