cabal-version:      3.0
name:               Haskell-ILP
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:            GPL-3.0-only

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             Gabriel Desfrene

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         gabriel@desfrene.fr

-- A copyright notice.
-- copyright:
category:           Math
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

library    
    -- Import common warning flags.
    import:           warnings

    -- Modules exported by the library.
    exposed-modules:
        Solver.ILP
        
    -- Modules included in this library but not exported.
    other-modules:
        Solver.Matrix, Solver.Tableau, Solver.Interface, Solver.Data

    build-depends:
        base ^>= 4.18.3.0,
        vector,
        containers,
        ratio-int,
        mtl
    
    -- Directories containing source files.
    hs-source-dirs:   src

    -- Base language which the package is written in.
    default-language: Haskell2010

executable Haskell-ILP
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        base ^>= 4.18.3.0,
        Haskell-ILP

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010
